Bug 398531 - Previewer opens archive-like documents as archive
Summary: Previewer opens archive-like documents as archive
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-12 07:27 UTC by Kai Uwe Broulik
Modified: 2018-09-24 10:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2018-09-12 07:27:15 UTC
Opening an Open Document file (ods, odt) or MS Office XML (xlsx, docx) in Ark has the previewer open it as an archive.

While it technically is an archive, browsing the archive's internals is not what the user wants.
Comment 1 blackfireburn 2018-09-18 15:29:40 UTC
As the formats are actually archives, what was the users expected behavior when opening with ark?
was ark set as the default application to open?
Comment 2 Kai Uwe Broulik 2018-09-18 15:41:29 UTC
The file was contained inside an archive that was received by mail.
Comment 3 blackfireburn 2018-09-18 16:02:13 UTC
Hello Kai,
I just recreated the issue as you described. I checked the default ark config and it is set to open preview. "preview the file with internal previewer"
if you change that to "open the file with the associated application" and apply, it will now open the file with writer or similar application when clicked.

Does this meet your expectation?
Comment 4 Kai Uwe Broulik 2018-09-18 16:12:44 UTC
Yes, that's what I did as a workaround. However, the previewer is enabled by default and as such it should behave well. I made a patch to address this: [1]

[1] https://phabricator.kde.org/D15445
Comment 5 Kai Uwe Broulik 2018-09-24 10:02:50 UTC
Git commit c737bf53e81691f5eca1ac6c1ef38054134f797c by Kai Uwe Broulik.
Committed on 24/09/2018 at 10:02.
Pushed by broulik into branch 'master'.

Use Ark part only when mime type exactly matches a supported type

Many file types (e.g. Open Document and Office Open XML) are technically just archives but browsing their internals is typically
not what the user wants.
Only when the mime type matches one of Ark's supported archive types directly, open them in the internal previewer.
If it turns out to be a genuine archive after all it should just open in a new Ark window then.

CHANGELOG: Fixed Ark previeweing certain files (e.g. Open Document) as archives instead of opening them in the appropriate application
FIXED-IN: 18.12.0

Differential Revision: https://phabricator.kde.org/D15445

M  +16   -0    part/arkviewer.cpp

https://commits.kde.org/ark/c737bf53e81691f5eca1ac6c1ef38054134f797c