Use Ark part only when mime type exactly matches a supported type

Many file types (e.g. Open Document and Office Open XML) are technically just archives but browsing their internals is typically
not what the user wants.
Only when the mime type matches one of Ark's supported archive types directly, open them in the internal previewer.
If it turns out to be a genuine archive after all it should just open in a new Ark window then.

CHANGELOG: Fixed Ark previeweing certain files (e.g. Open Document) as archives instead of opening them in the appropriate application

BUG: 398531
FIXED-IN: 18.12.0

Differential Revision: https://phabricator.kde.org/D15445